<resources>
    <string name="app_name">FinalApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_favorite">Favorites</string>

    <string name="menu_recent">Recent</string>
    <string name="menu_game">Game</string>
    <string name="menu_invite">Invite Friends</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Game Zone</string>
</resources>
