<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_vew">
    <group
        android:id="@+id/group_home"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_dictionary"
            android:title="@string/menu_dictionary"
            />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite"/>
    </group>

    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/menu_recent" />

        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_game"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_invite_friend"
            android:title="@string/menu_invite"/>
    </group>

    <group
        android:id="@+id/group_more"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>

</menu>
