<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.finalapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dictionary"
        android:name="com.example.finalapp.DictionaryFragment"
        android:label="@string/menu_dictionary"
        tools:layout="@layout/activity_game" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.finalapp.BookmarkFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.finalapp.ui.tools.ToolsFragment"
        android:label="@string/menu_recent"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.finalapp.GameZone"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.finalapp.ui.send.SendFragment"
        android:label="@string/menu_invite"
        tools:layout="@layout/fragment_send" />
</navigation>